hphp/test/slow/password/invalid_password.php.expectf

Catchable fatal error: Argument 1 to password_hash() must be of type ?string, array given in %s/test/slow/password/invalid_password.php on line 2
